--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,10 @@ img {
   max-width: 100%;
 }
 .container {
-    max-width: 1280px;
+    width: 100%;
+    max-width: 1320px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 .visually-hidden {
   position: absolute;
@@ -66,11 +68,11 @@ img {
 }
 .site-header {
     padding: 45px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 .logo-link {
 }
@@ -108,7 +110,7 @@ img {
 }
 .site-main {
 }
-.hero__container {
+.hero {
   background: #A2A2A2;
   background-image: url(../img/bg-image.jpg);
   background-repeat: no-repeat;
@@ -156,29 +158,28 @@ img {
   padding-bottom: 200px;
   position: relative;
 }
-.coffeetypes__list::before {
-  content: url(../img/our-collection.svg);
-  width: 1110px;
-  position: absolute;
-  z-index: 0;
-  top: 222px;
+.coffeetypes__heading {
+  font-family: 'Fraunces';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 150px;
+  line-height: 120px;
+  text-align: center;
+  margin: 0;
+  background-image: linear-gradient(180deg, rgba(254, 252, 247, 0.0001) 0%, #FEFCF7 100%);
+  background-color: #83888F;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 .coffeetypes__list {
   padding: 0;
   margin: 0;
+  margin-top: -60px;
   list-style: none;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 2;
-}
-.coffeetypes__list::after {
-  content: url(../img/Rectangle.svg);
-  width: 1110px;
-  position: absolute;
-  z-index: 1;
-  top: 150px;
-
 }
 .coffeetypes__item {
   width: 255px;
@@ -196,22 +197,24 @@ img {
   font-weight: 900;
   font-size: 24px;
   line-height: 32px;
-  text-align: center;
   color: #333D4B;
 }
 .coffeetypes__item-desc {
   margin: 0;
   color: #333D4B;  
 }
-.about__container {
+.about {
+  padding-right: 85px;
+  padding-left: 85px;
   padding-top: 100px;
   padding-bottom: 317px;
   border-radius: 10px;
   background-color: #2C343E;
   position: relative;
+  max-width: 1280px;
 }
 .about__heading-wrapper {
-  width: 540px;
+  max-width: 540px;
   margin: 0 auto;
 }
 .about__heading {
@@ -253,6 +256,9 @@ img {
 .about__item-img {
   margin-bottom: 56px;
 }
+.about__item-content {
+
+}
 .about__item-heading {
   margin-top: 0;
   margin-bottom: 24px;
@@ -265,9 +271,8 @@ img {
   padding-top: 351px;
   padding-bottom: 200px;
   text-align: left;
-}
-.services__container {
-  padding: 0 85px;
+  padding-right: 85px;
+  padding-left: 85px;
 }
 .services__heading {
   font-family: 'Fraunces';
@@ -287,21 +292,20 @@ img {
   justify-content: center;
   margin-bottom: 64px;
   position: relative;
+  counter-reset: item;
 }
 .services__item {
   width: 380px;
   padding-top: 82px;
+  padding-right: 95px;
+  counter-increment: item;
 }
 .services__item:not(:last-child) {
   border-top: 1px solid #FDD6BA;
 }
 .services__item::before {
-  content: url(../img/Oval.svg);
-  top: -15px;
-  width: 31px;
-  position: absolute;
-}
-.services__item-num {
+  display: block;
+  content: '0' counter(item);
   font-family: 'Fraunces';
   margin-top: 0;
   margin-bottom: 38px;
@@ -310,9 +314,14 @@ img {
   line-height: 72px;
   color: #FDD6BA;
 }
+.services__item::after {
+  content: url(../img/Oval.svg);
+  top: -15px;
+  width: 31px;
+  position: absolute;
+}
 .services__item-heading {
   font-family: 'Fraunces';
-  width: 255px;
   margin-top: 0;
   margin-bottom: 42px;
   font-weight: 900;
@@ -323,18 +332,13 @@ img {
 .services__item-desc {
   margin: 0;
   color: #333D4B;
-  width: 285px;
 }
 .site-footer {
-}
-.site-footer__container {
   padding: 47px 85px;
   background-color: #2C343E;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.logo-link {
 }
 .site-logo {
   display: block;
@@ -360,4 +364,178 @@ img {
 }
 .site-footer__sm-logo {
   display: block;
+}
+@media only screen and (max-width:1200px) {
+  .hero {
+    background-position: center;
+    background-size: cover;
+  }
+  .hero__content {
+    width: 400px;
+  }
+  .hero__heading{
+    font-size: 48px;
+    line-height: 48px;
+  }
+  .coffeetypes__heading {
+    font-size: 80px;
+    line-height: 72px;
+  }
+  .coffeetypes__list {
+    margin-top: -45px;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .coffeetypes__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 35px 41px;
+  }
+  .coffeetypes__item-content {
+    text-align: left;
+  }
+  .about {
+    padding-bottom: 370px;
+  }
+  .about__heading {
+    font-size: 32px;
+    line-height: 48px;
+  }
+  .about__list {
+    flex-direction: column;
+    margin-right: 85px;
+  }
+  .about__item {
+    padding: 41px 48px 41px 70px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .about__item:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
+  .about__item-img {
+    width: 51px;
+    height: 56px;
+    padding: 0;
+    margin: 0;
+    margin-right: 55px;
+  }
+  .about__item-content {
+    text-align: left;
+  }
+  .services {
+    padding-top: 470px;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+  .services__item {
+    padding-right: 10px;
+  }
+  .site-footer {
+    flex-direction: column;
+  }
+  .sitenav--fot {
+    margin: 0;
+    margin-top: 33px;
+    margin-bottom: 67px;
+  }
+
+}
+@media only screen and (max-width:650px) {
+  .sitenav {
+    display: none;
+  }
+  .hero {
+    padding: 100px 24px;
+  }
+  .hero__content {
+    text-align: center;
+    width: auto;
+  }
+  .hero__heading {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .coffeetypes {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+  .coffeetypes__heading {
+    font-size: 40px;
+  }
+  .coffeetypes__item {
+    flex-direction: column;
+  }
+  .coffeetypes__item-content {
+    text-align: center;
+  }
+  .about {
+    padding-right: 24px;
+    padding-left: 24px;
+    padding-top: 64px;
+    padding-bottom: 664px;
+  }
+  .about__list {
+    left: 24px;
+    margin-right: 24px;
+  }
+  .about__item {
+    flex-direction: column;
+    padding: 72px 33px;
+    padding-bottom: 51px;
+    width: 100%;
+  }
+  .about__item-img {
+    margin: 0;
+    margin-bottom: 56px;
+    width: 72px;
+    height: 72px;
+  }
+  .about__item-content {
+    text-align: center;
+  }
+  .services {
+    text-align: center;
+    padding-top: 717px;
+    padding-bottom: 120px;
+  }
+  .services__heading {
+    margin-bottom: 80px;
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .services__list {
+    flex-direction: column;
+    margin-bottom: 80px;
+  }
+  .services__item {
+    width: auto;
+  }
+  .services__item::after {
+    display: none;
+  }
+  .services__item:not(:last-child) {
+    border-top: none;
+    margin-bottom: 56px;
+  }
+  .sitenav--fot {
+    display: block;
+    margin-bottom: 47px;
+  }
+  .sitenav--fot
+  .sitenav__list {
+    flex-direction: column;
+  }
+  .sitenav--fot
+  .sitenav__item:not(:last-child) {
+    margin: 0;
+    margin-bottom: 24px;
+  }
+
+  
 }
