--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ only screen and (min-device-pixel-ratio: 2),
 only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (min-resolution: 192dpi),
 only screen and (min-resolution: 2dppx) {
-    .intro {
+    .hero--subscribe {
       background-image: url(../img/subscription-bg-2x.jpg);
     }
 }
