--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -26,3 +26,29 @@
     margin-bottom: 56px;
     color: #FEFCF7;
 }
+@media only screen and (max-width:1200px) {
+    .hero {
+      background-position: center;
+      background-size: cover;
+    }
+    .hero__content {
+      width: 400px;
+    }
+    .hero__heading{
+      font-size: 48px;
+      line-height: 48px;
+    }
+}
+@media only screen and (max-width:) {
+    .hero {
+      padding: 100px 24px;
+    }
+    .hero__content {
+      text-align: center;
+      width: auto;
+    }
+    .hero__heading {
+      font-size: 40px;
+      line-height: 40px;
+    }
+}
