--- a/css/main.css
+++ b/css/main.css
@@ -462,7 +462,8 @@ img {
     background-size: cover;
   }
   .hero__content {
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
   }
   .hero__heading {
     font-size: 48px;
