--- a/css/main.css
+++ b/css/main.css
@@ -471,7 +471,7 @@ img {
   }
 }
 
-@media only screen and (max-width: ) {
+@media only screen and (max-width: 650px) {
   .hero {
     padding: 100px 24px;
   }
