--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -40,7 +40,7 @@
       line-height: 48px;
     }
 }
-@media only screen and (max-width:) {
+@media only screen and (max-width:650px) {
     .hero {
       padding: 100px 24px;
     }
