--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -10,11 +10,10 @@
 @import 'services';
 @import 'site-footer';
 @import 'site-logo';
-@import 'hero--about-us';
 @import 'our-commitment';
 @import 'quality';
 @import 'headquarters';
-@import 'hero--subscribe';
 @import 'services--dark';
 @import 'coffeecreate';
 @import 'coffeesteps';
+@import 'burger-btn';
