--- a/scss/blocks/_coffeetypes.scss
+++ b/scss/blocks/_coffeetypes.scss
@@ -14,11 +14,11 @@
     margin: 0;
     background-image: linear-gradient(180deg, rgba(254, 252, 247, 0.0001) 0%, #FEFCF7 100%);
     background-color: #83888F;
-    -webkit-background-clip: text;
     color: transparent;
+    -webkit-background-clip: text;
 }
 .coffeetypes__list {
-    @include list-unstyled
+    @include list-unstyled;
     margin-top: -60;
     display: flex;
     align-items: center;
