--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -26,6 +26,56 @@
     margin-bottom: 56px;
     color: #FEFCF7;
 }
+
+.hero--subscribe {
+  padding: 134px 85px;
+  background-color: #A2A2A2;
+  background-image: url(../img/subscription-bg-1x.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  margin-bottom: 165px;
+  .hero__content {
+    max-width: 490px;
+    text-align: left;
+    color: #FEFCF7;
+  }
+  .hero__heading {
+    margin-top: 0;
+    margin-bottom: 32px;
+    font-family: 'Fraunces';
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 72px
+  }
+  .hero__desc {
+    margin: 0;
+    max-width: 445px;
+  }
+  @include breakpoint-down(1200px) {
+    .hero__heading {
+      font-size: 48px;
+      line-height: 48px;
+    }
+  }
+  @include breakpoint-down(650px) {
+    .hero__heading {
+      font-size: 40px;
+      line-height: 40px;
+    }
+  }
+}
+
+.hero--about-us {
+  background-image: url(../img/hero-bg-1x.jpg);
+  .hero__content {
+    max-width: 445px;
+  }
+  .hero__desc {
+    margin-bottom: 0;
+  }
+}
+
 @media only screen and (max-width:1200px) {
     .hero {
       background-position: center;
