--- a/scss/blocks/_site-footer.scss
+++ b/scss/blocks/_site-footer.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
 }
 .site-footer__sm-list {
-    @include list-unstyled
+    @include list-unstyled;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,8 +22,13 @@
         fill: #FDD6BA;
     }
 }
-@media only screen and (max-width:1200px) {
+@include breakpoint-down(1000px) {
     .site-footer {
       flex-direction: column;
+    }
+}
+@include breakpoint-down(650px){
+    .site-footer{
+        padding: 35px 60px;
     }
 }
