--- a/scss/blocks/_coffeecreate.scss
+++ b/scss/blocks/_coffeecreate.scss
@@ -64,6 +64,7 @@
     margin-left: auto;
     display: block;
     max-width: 217px;
+    border: none;
 }
 @media only screen and (max-width:1200px) {
     .coffeecreate {
