--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -35,18 +35,16 @@
     }
     .sitenav--open {
     display: block;
-    position: absolute;
+    position: fixed;
     z-index: 10;
     left: 0;
     top: 90px;
     padding: 40px 0;
     background-image: linear-gradient(0deg, rgba(254, 252, 247, 0.504981) 0%, #FEFCF7 55.94%);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     .sitenav__list {
         flex-direction: column;
-        
-
     }
     .sitenav__item {
         margin: 0;
