--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -3,4 +3,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: #FEFCF7;
 }
